What would be ideal is for the 3 lines to remain left justified, but be center aligned (vertically) between the search bar and the bottom of the gray bar. Additionally, we want to make sure that the blue line does not get pushed down like it is in the below screenshot – this was a result of the developer’s quick fix.

--- a/src/less/article.less
+++ b/src/less/article.less
@@ -7,19 +7,16 @@
 			border-bottom:6px solid @teal;
 
 			&.empty {
-				min-height: 265px;
+				min-height: initial;
+				height: 265px;
 
 				.hero-img {
 					max-height:265px;
 				}
 
-				h2 {
-					bottom:59px;
+				h2{
+					bottom: inherit;
 				}
-			}
-
-			&.error {
-							
 			}
 
 			.hero-img {
