--- a/src/less/homepage.less
+++ b/src/less/homepage.less
@@ -205,7 +205,7 @@
 			}
 			
 			.articlePod {				
-				width: 32%;
+				width: 33%;
 				display: inline-table; 
 				padding: 10px 0 10px 0;
 				font-family: @benton-book;
